{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 683,
  "lineage": "eb56b8b2-9e01-3b89-d3dd-ca5a8220b7dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "haloPublicNatIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bb09a989929b59f",
            "domain": "vpc",
            "id": "eipalloc-06bb09a989929b59f",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-97-96-204.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.96.204",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.halo-terraform-igw",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "halo-terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:internet-gateway/igw-05453b8c7459964b7",
            "id": "igw-05453b8c7459964b7",
            "owner_id": "578841480116",
            "tags": {
              "Name": "halo-terraform-igw"
            },
            "tags_all": {
              "Name": "halo-terraform-igw"
            },
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "halo-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:loadbalancer/app/halo-terraform-elb/a25e764f9db21b08",
            "arn_suffix": "app/halo-terraform-elb/a25e764f9db21b08",
            "desync_mitigation_mode": "defensive",
            "dns_name": "halo-terraform-elb-583113382.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:loadbalancer/app/halo-terraform-elb/a25e764f9db21b08",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "halo-terraform-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028cfff69e9e36eac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e381ace1eec891c9"
              },
              {
                "subnet_id": "subnet-0e635b3ff6b05ce79"
              }
            ],
            "subnets": [
              "subnet-0e381ace1eec891c9",
              "subnet-0e635b3ff6b05ce79"
            ],
            "tags": {
              "Application": "Halo"
            },
            "tags_all": {
              "Application": "Halo"
            },
            "vpc_id": "vpc-0541404cc9913cf6b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.halo_sg",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_private_subnet_2",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:listener/app/halo-terraform-elb/a25e764f9db21b08/6b8767f091256f1d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:targetgroup/terraform-selenium-nodes/4ffaa74e883a26ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:listener/app/halo-terraform-elb/a25e764f9db21b08/6b8767f091256f1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:loadbalancer/app/halo-terraform-elb/a25e764f9db21b08",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.halo-elb",
            "aws_lb_target_group.halo-targetGroup",
            "aws_security_group.halo_sg",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_private_subnet_2",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "halo-targetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:targetgroup/terraform-selenium-nodes/4ffaa74e883a26ff",
            "arn_suffix": "targetgroup/terraform-selenium-nodes/4ffaa74e883a26ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:578841480116:targetgroup/terraform-selenium-nodes/4ffaa74e883a26ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-selenium-nodes",
            "port": 4444,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "Halo"
            },
            "tags_all": {
              "Application": "Halo"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_lb.halo-elb",
            "aws_security_group.halo_sg",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_private_subnet_2",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "haloNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bb09a989929b59f",
            "association_id": "eipassoc-036fa26a728e4f91c",
            "connectivity_type": "public",
            "id": "nat-0b210ebe72814b237",
            "network_interface_id": "eni-031799f333c2d3d02",
            "private_ip": "10.0.0.9",
            "public_ip": "3.97.96.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e3902e486cb38b35",
            "tags": {
              "Name": "halo-terraform-nat-gateway"
            },
            "tags_all": {
              "Name": "halo-terraform-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.haloPublicNatIP",
            "aws_internet_gateway.halo-terraform-igw",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:route-table/rtb-01de767680979f506",
            "id": "rtb-01de767680979f506",
            "owner_id": "578841480116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05453b8c7459964b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.halo-terraform-igw",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRouteTable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:route-table/rtb-0d11d7fd5764349d4",
            "id": "rtb-0d11d7fd5764349d4",
            "owner_id": "578841480116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b210ebe72814b237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "halo-terraform-rtb-private1-ca-central-1a"
            },
            "tags_all": {
              "Name": "halo-terraform-rtb-private1-ca-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.haloPublicNatIP",
            "aws_internet_gateway.halo-terraform-igw",
            "aws_nat_gateway.haloNatGateway",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRouteTable2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:route-table/rtb-0ac8f5a0c18a80f8e",
            "id": "rtb-0ac8f5a0c18a80f8e",
            "owner_id": "578841480116",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b210ebe72814b237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "halo-terraform-rtb-private1-ca-central-1b"
            },
            "tags_all": {
              "Name": "halo-terraform-rtb-private1-ca-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.haloPublicNatIP",
            "aws_internet_gateway.halo-terraform-igw",
            "aws_nat_gateway.haloNatGateway",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05700496ef84bdcb7",
            "route_table_id": "rtb-0d11d7fd5764349d4",
            "subnet_id": "subnet-0e381ace1eec891c9"
          },
          "dependencies": [
            "aws_eip.haloPublicNatIP",
            "aws_internet_gateway.halo-terraform-igw",
            "aws_nat_gateway.haloNatGateway",
            "aws_route_table.privateRouteTable1",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7155337e28e6ad",
            "route_table_id": "rtb-0ac8f5a0c18a80f8e",
            "subnet_id": "subnet-0e635b3ff6b05ce79"
          },
          "dependencies": [
            "aws_eip.haloPublicNatIP",
            "aws_internet_gateway.halo-terraform-igw",
            "aws_nat_gateway.haloNatGateway",
            "aws_route_table.privateRouteTable2",
            "aws_subnet.halo_terraform_private_subnet_1",
            "aws_subnet.halo_terraform_private_subnet_2",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c5c162d5b4d2535",
            "route_table_id": "rtb-01de767680979f506",
            "subnet_id": "subnet-0e3902e486cb38b35"
          },
          "dependencies": [
            "aws_internet_gateway.halo-terraform-igw",
            "aws_route_table.PublicRouteTable",
            "aws_subnet.halo_terraform_public_subnet_1",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f12213734828ec60",
            "route_table_id": "rtb-01de767680979f506",
            "subnet_id": "subnet-058c52853132a6689"
          },
          "dependencies": [
            "aws_internet_gateway.halo-terraform-igw",
            "aws_route_table.PublicRouteTable",
            "aws_subnet.halo_terraform_public_subnet_2",
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "halo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:security-group/sg-028cfff69e9e36eac",
            "description": "Allow all port and all ips from inbound and outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028cfff69e9e36eac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all in VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "haloTerraformSG",
            "name_prefix": "",
            "owner_id": "578841480116",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "haloTerraformSecurityGroup"
            },
            "tags_all": {
              "Name": "haloTerraformSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "halo_terraform_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:subnet/subnet-0e381ace1eec891c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e381ace1eec891c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578841480116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "halo-terraform-subnet-private1-ca-central-1a"
            },
            "tags_all": {
              "Name": "halo-terraform-subnet-private1-ca-central-1a"
            },
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "halo_terraform_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:subnet/subnet-0e635b3ff6b05ce79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e635b3ff6b05ce79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578841480116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "halo-terraform-subnet-private1-ca-central-1b"
            },
            "tags_all": {
              "Name": "halo-terraform-subnet-private1-ca-central-1b"
            },
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "halo_terraform_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:subnet/subnet-0e3902e486cb38b35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3902e486cb38b35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578841480116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "halo-terraform-subnet-public1-ca-central-1a"
            },
            "tags_all": {
              "Name": "halo-terraform-subnet-public1-ca-central-1a"
            },
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "halo_terraform_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:subnet/subnet-058c52853132a6689",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058c52853132a6689",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "578841480116",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "halo-terraform-subnet-public2-ca-central-1b"
            },
            "tags_all": {
              "Name": "halo-terraform-subnet-public2-ca-central-1b"
            },
            "vpc_id": "vpc-0541404cc9913cf6b"
          },
          "dependencies": [
            "aws_vpc.halo_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "halo_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:578841480116:vpc/vpc-0541404cc9913cf6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02ddde3d6570db62b",
            "default_route_table_id": "rtb-0519653ac5f857921",
            "default_security_group_id": "sg-0870c3782772b476a",
            "dhcp_options_id": "dopt-03ee32cb7e5ccac45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0541404cc9913cf6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0519653ac5f857921",
            "owner_id": "578841480116",
            "tags": {
              "Name": "halo-terraform"
            },
            "tags_all": {
              "Name": "halo-terraform"
            }
          }
        }
      ]
    }
  ]
}